<?xml version="1.0"?>
<package format="2">
  <name>octomap_handlers_pkg</name>
  <version>0.0.1</version>
  <description>Various utilities for handling octomaps statically and on the fly</description>

  <maintainer email="chris@cthierauf.com">cst</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>octomap</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export></export>

</package>
